objects/GRP_CC_ContractBQ__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>GRP_CC_BackBar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BackBar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_BrandQuality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>CORE_BrandQuality__c</referenceTo>
        <relationshipLabel>Contracts BQ</relationshipLabel>
        <relationshipName>ContractBQ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contract</label>
        <referenceTo>GRP_CC_Contract__c</referenceTo>
        <relationshipLabel>Contracts BQ</relationshipLabel>
        <relationshipName>ContractBQ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Negotiated_Rebate_To_Be_Paid_Per__c</fullName>
        <label>Negotiated Rebate To Be Paid Per</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Litter</fullName>
                </value>
                <value>
                    <fullName>9 Litters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRP_CC_Negotiated_Rebate__c</fullName>
        <label>Negotiated Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GRP_CC_OnMenu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnMenu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Pouring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pouring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_SuperPremium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SuperPremium</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract BQ</label>
    <nameField>
        <displayFormat>BQ-{0000}</displayFormat>
        <label>ContractBQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts BQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>